Fix welcome message alignment

--- a/styles/components/_header.sass
+++ b/styles/components/_header.sass
@@ -23,6 +23,7 @@ html[xmlns] .clearfix
   .welcome-message
     position: absolute
     top: 0
+    left: 0
     overflow: hidden
     height: 100%
     width: 100%
